# engram

./: .gitignore  CONSTITUTION.md  GEMINI.md  README.md  main.py  pyproject.toml
.specify/memory/: constitution.md
engram-bridge/: SKILL.md  query.sh
specs/: PROJECT_PLAN.md  SPEC-001.md  SPEC-002.md  SPEC-003.md  SPEC-004.md
specs/006-engram-cli-command/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-engram-cli-command/checklists/: requirements.md
specs/006-engram-cli-command/contracts/: cli-schema.md
specs/007-mcp-engram-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-mcp-engram-server/checklists/: requirements.md
specs/007-mcp-engram-server/contracts/: mcp-tool-schema.md
src/engram/: main.py
src/engram.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/engram/mcp/: __init__.py  server.py  tools.py
tests/: test_bridge.py  test_engram.py  test_mcp.py
