[project]
name = "engram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lancedb>=0.29.2",
    "mcp[cli]",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "sentence-transformers>=5.2.3",
    "typer>=0.24.0",
]

[project.scripts]
engram = "engram.main:main"
